fix: spacing between gallery and features section

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ footer .download .download-btn {
   }
 
   .gallery {
-    margin: 40% 10%;
+    margin: 40% 10% 0;
   }
 
   .features {
